k8s-configs/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
spec:
  selector:
    app: kloudafrica
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: kloudafrica
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
# apiVersion: v1
# kind: Service
# metadata:
#   name: client-cluster-ip-service
# spec:
#   type: ClusterIP
#   selector:
#     component: web
#   ports:
#     - port: 3000
#       targetPort: 3000
