k8s-configs/ingress-service.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kloudafrica-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: client-cluster-ip-service
#                 port:
#                   number: 3000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kloudafrica-ingress
  labels:
    name: kloudafrica-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
